kubernetes/apps/storage/garage/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-admin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Garage"
    gethomepage.dev/group: "Storage"
    gethomepage.dev/description: "S3-compatible object storage"
    gethomepage.dev/icon: "minio.png"
    gethomepage.dev/href: "https://garage.${SECRET_DOMAIN}"
spec:
  hostnames:
    - garage.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: garage-admin
          port: 3903
